# e-zip

./: biome.json  bun.lockb  index.html  package.json  rsbuild.config.ts  tsconfig.json  tsconfig.node.json  uno.config.ts  vite.config.ts
src/: App.css  App.tsx  bindings.ts  index.tsx
src-tauri/: Cargo.toml  Tauri.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs  sevenz.rs
src-tauri/src/config/: tauri.rs
src-tauri/src/sevenz/: codepage.rs  delete.rs  error.rs  fs_tree.rs  multi_volume.rs  unzip.rs
src-tauri/src/sevenz/fs_tree/: display.rs
src/components/: AppSidebar.css  AppSidebar.tsx  Archive-Content.tsx  Archive-Contents.tsx  ArchiveContent.tsx  ArchiveContents.tsx  CodepageButton.tsx  Config.tsx  DeleteUnzipedArchiveButton.tsx  LoadingArchiveButton.tsx  Password.tsx  RefreshArchiveButton.tsx  RemoveAllArchiveButton.tsx  RemoveArchiveButton.tsx  SevenZipVersion.tsx  TargetDir.tsx  ThemeSelector.tsx  UnzipButton.tsx  UnzipControl.tsx  UnzipSetting.tsx  icons.tsx
src/components/ui/: loading-spinner.tsx  sidebar.tsx  switch.tsx  text-field.tsx
