[package]
name = "e-zip"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "e_zip_lib"
crate-type = ["staticlib", "cdylib", "rlib"]


[build-dependencies]
tauri-build = { version = "2", features = ["config-toml"] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ego-tree = { version = "0.10.0", features = ["serde"] }
specta = { version = "2.0.0-rc.22", features = ["time"] }
specta-typescript = "0.0.9"
tauri-specta = { version = "2.0.0-rc.21", features = ["derive", "typescript"] }
specta-util = { version = "0.0.9", features = ["serde"] }
notify = "8"
notify-debouncer-full = "0.5.0"
trash = "5.2.0"
toml = "0.8"
regex = "1.11.1"
thiserror = "2.0.11"
walkdir = "2.5.0"
time = { version = "0.3.36", features = ["serde"] }
lru = "0.13"
unicode-normalization = "0.1.24"
time-tz = { version = "3.0.0-rc.5.0.0", features = ["system"] }
tokio = "1.41.1"
serde_with = "3.11.0"
strum = { version = "0.27", features = ["derive"] }
